--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,17 @@ name = "json-resolve"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 serde = { version = "1.0.196", features = ["derive"] }
+serde-wasm-bindgen = "0.6.5"
 serde_json = "1.0.113"
+wasm-bindgen = "0.2.92"
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  "console"
+]
